# AI-Final-Project

./: README.md  finetune.py  model-test.ipynb  nc_downloader.py  nc_to_h5.py  report.md  requirements.txt
mcp-server/: main.py  pyproject.toml
