[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "geopy>=2.4.1",
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.3",
    "netcdf4>=1.7.2",
    "numpy==1.26.4",
    "peft>=0.15.2",
    "ruamel-yaml>=0.18.14",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "xarray>=2023.4.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
